CHANGES:
0.8.4 -> 0.8.5
- Conversion of font face, size and colour in WP5 parser (Fridrich)
- Conversion of foot/endnotes in WP5.x format (Fridrich)
- Conversion of headers/footers in WP3 and WP5 parsers (Fridrich)
- Prevent paragraph negative paragraph margins due to page margin change.
  Removes the ugly text-border lines running across the text in
  OpenOffice.org (Fridrich)
- Make page margins constant between two hard page breaks (Fridrich)
- Convert page margin changes into section margins in multi-column sections
- Move absolute position values in multicolumn sections from whatever column
  they are in into  the first one. Fixes the off-page position of the second
  table in 05mechanicalservice.wpd (Fridrich)
- Defer page span change to the end of the current paragraph if it is
  opened (Fridrich)
- Fix http://bugzilla.abisource.com/show_bug.cgi?id=10105, an incorrect
  conversion of table alignment in WP3.x file format (Fridrich)
- Fix small issue with incorrect number of pages in page-spans (Fridrich)

0.8.3 -> 0.8.4
- Fix compilation with gcc >=  4.1.0 (Stephan Kulow)
- Initial support for tables in WP5.x format (Fridrich Strba)
- Fix compilation on MacOSX (Francis J. Franklin)
- Conversion of font name, size and colour for WP3.x format (Fridrich)
- Collapse the LL and HL Listeners into one classe each (Fridrich)
- Initial support of tables in WP3.x format including the cell background
  colour (Fridrich Strba)
- Conversion of sections with multiple columns in WP3.x format (Fridrich)
- Conversion of foot/endnotes in WP3.x format (Fridrich)
- Adding an assignment operator to WPXString class as well as trying
  to make it much more a std::string wrapper (Fridrich)

0.8.2 -> 0.8.3
- Make parser follow closer the document stream, simplify the _flushText()
  function; eliminate empty spans and sections (Fridrich Strba) 
- Improvement of list conversion: position of the list reference, distance
  of the text from the reference (Fridrich Strba).